<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_product_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/product_group"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/filter_spinner_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_product_group" />

    <TextView
        android:id="@+id/text_filter_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/arrange_by"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_spinner_style" />

    <RadioGroup
        android:id="@+id/filter_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_filter_by">

        <RadioButton
            android:id="@+id/filter_radio_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violet_dark"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <RadioButton
            android:id="@+id/filter_radio_new_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violet_dark"
            android:text="@string/product_new"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <RadioButton
            android:id="@+id/filter_radio_seller_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violet_dark"
            android:text="@string/product_seller"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linear_Layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel_filter"
            android:layout_width="@dimen/dp_90"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginVertical="@dimen/dp_2"
            android:layout_weight="1"
            android:background="@drawable/rectangle_violetdark_stroke"
            android:text="@string/cancel_filer"
            android:textColor="@color/violet_dark" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_done"
            android:layout_width="@dimen/dp_90"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginVertical="@dimen/dp_2"
            android:layout_weight="1"
            android:background="@drawable/rectangle_button_violet"
            android:text="@string/done"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>