<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:padding="@dimen/dp_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_product_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/product_amount"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/product_price"
            android:textColor="@color/violet_dark"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>
</LinearLayout>