<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_10">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_item_text" />

        <TextView
            android:id="@+id/tv_product_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/product_amount"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_item_text" />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/product_price"
            android:textColor="@color/violet_dark"
            android:textSize="@dimen/sp_item_text" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_plus"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:background="@drawable/oval_button_gray"
        android:backgroundTint="@color/violet_dark"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_amount"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/number_0"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_item_text"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_minus"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:background="@drawable/oval_button_gray"
        android:backgroundTint="@color/violet_dark"
        android:src="@drawable/ic_baseline_remove_24"
        app:layout_constraintEnd_toStartOf="@id/text_amount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/text_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/number_0"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_item_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>